--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
+    font-family: stolzl, sans-serif;
     background-color: rgba(255, 247, 236);
     color: rgba(70, 51, 53);
 }
@@ -14,6 +15,7 @@ a {
     text-decoration: none;
     color: rgba(70, 51, 53);
 }
+
 
 .container {
     width: 100%;
@@ -31,12 +33,13 @@ header {
     padding: 20px 40px;
     /* border-bottom: 2px solid #333; */
     background-color: rgba(240, 232, 213);
+
 }
 
 
 .logo_container img {
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     /* border-radius: 50%; */
     /* background-color: #333; */
 }
@@ -54,14 +57,16 @@ nav ul {
 }
 
 nav li {
-    text-transform: lowercase;
-    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 400;
     cursor: pointer;
     transition: color 0.3s;
 }
 
 nav li:hover {
     color: #666;
+    text-decoration: underline;
 }
 
 .btn {
@@ -80,8 +85,8 @@ nav li:hover {
 }
 
 .btn img {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     /* background-color: #333; */
 }
 
@@ -90,34 +95,49 @@ nav li:hover {
     position: fixed;
     bottom: 100px;
     right: 40px;
-    background-color: rgba(240, 232, 213);
+    background-color: white;
+    border: rgba(70, 51, 53) solid 1px;
     border-radius: 45%;
-    padding: 20px;
+    padding: 15px;
+}
+
+.tips img {
+    width: 30px;
+    height: 30px;
 }
 
 
 /* Main Content */
+.mainhome {
+    padding: 0px;
+}
+
 main {
-    padding: 40px;
+    padding: 40px 100px;
 
 }
 
 .home_header {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px 40px;
+    padding-top: 60px;
+    padding-bottom: 15px;
 
 }
 
 .home_header h1 {
-    font-size: 2.5rem;
-    text-transform: lowercase;
-    font-weight: normal;
+    font-family: aquavit, sans-serif;
+    font-size: 5rem;
+    text-transform: capitalize;
+    font-weight: 100px;
     letter-spacing: 2px;
+    font-style: normal;
+    /* text-transform: uppercase; */
+
 }
 
 .home_background img {
@@ -138,10 +158,13 @@ main {
 }
 
 .page_header h1 {
+    font-family: aquavit, sans-serif;
     font-size: 2.5rem;
-    text-transform: lowercase;
-    font-weight: normal;
+    text-transform: uppercase;
+    font-weight: 400px;
     letter-spacing: 2px;
+
+    font-style: normal;
 }
 
 /* Product Rows */
@@ -202,10 +225,10 @@ main {
 
 .product-name {
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 300;
     text-align: center;
     margin-top: 10px;
-    text-transform: lowercase;
+    text-transform: capitalize;
 }
 
 /* Shelf Styling */
@@ -242,11 +265,13 @@ main {
     /* border: 2px solid #333; */
     padding: 10px 15px;
     font-size: 14px;
-    font-weight: bold;
+    font-weight: medium;
+    text-transform: capitalize;
     border-radius: 3px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+/* about page */
 .info_pic {
     display: flex;
     align-items: flex-start;
@@ -258,6 +283,7 @@ main {
 .text {
     flex: 1;
 }
+
 
 .picture {
     flex: 1;
@@ -278,6 +304,14 @@ footer {
     /* border-top: 2px solid #333; */
 }
 
+.footer_about {
+    display: flex;
+    /* justify-content: space-between; */
+    justify-content: left;
+    align-items: left;
+    padding: 20px 5px;
+    /* border-top: 2px solid #333; */
+}
 
 footer ul {
     display: flex;
